Modify scripts to run with the latest performance-commons